--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,7 +33,6 @@ jobs:
       - name: Dependencies
         run: |
           pip3 install beautifulsoup4 lxml
-          sudo apt-get update
           echo "163.172.251.201 store.rg-adguard.net" | sudo tee -a /etc/hosts
       - name: Download themes
         shell: python
@@ -49,10 +48,10 @@ jobs:
           })
           html = BeautifulSoup(res.content, "lxml")
 
-          a = html.find("a", string=re.compile("Microsoft\..*\.appx"))
+          a = html.find("a", string=re.compile(f"Microsoft\..*\.appx"))
           link = a["href"]
           print(f"downloading link: {link}", flush=True)
-          out_file = "a"
+          out_file = {link}
           if not os.path.isfile(out_file):
               urllib.request.urlretrieve(link, out_file)
 
